infra/k8s/nginx/nginx-ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-rental-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/default-backend: hello-default-deployment
  #   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  # defaultBackend:
  #   service:
  #     name: hello-default-deployment
  #     port: 
  #       number: 8080
  rules:
  - http:
      paths:
      ### Default API
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hello-default-deployment
            port: 
              number: 8080
      ### Fleet API
      - path: "/api/vehicle/"
        pathType: Prefix
        backend:
          service:
            name: fleet-msvc
            port: 
              number: 8083
      ### User Management API
      - path: "/api/customer/"
        pathType: Prefix
        backend:
          service:
            name: user-msvc
            port: 
              number: 8082
      - path: "/api/company/"
        pathType: Prefix
        backend:
          service:
            name: user-msvc
            port: 
              number: 8082
      ### Rent API
      - path: "/api/rent/"
        pathType: Prefix
        backend:
          service:
            name: rent-msvc
            port: 
              number: 8084
      - path: "/api/technicalCheck/"
        pathType: Prefix
        backend:
          service:
            name: rent-msvc
            port: 
              number: 8084
